--- a/WebContent/resources/css/core.css
+++ b/WebContent/resources/css/core.css
@@ -67,3 +67,21 @@ body {
 .has-error {
     color: red
 }
+
+#footer {
+    width: 100%;
+    border-top: 3px solid #337ab7;
+    margin-top: 20px;
+    padding: 10px 0;
+    background: #ffffff;
+    text-align: center;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+.footer-fixed {
+    z-index: 9999;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
