--- a/WebContent/resources/css/core.css
+++ b/WebContent/resources/css/core.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+    padding-top: 60px; 60px to make the container go all the way to the bottom of the topbar
     padding-bottom: 40px;
     background-color: #f5f5f5;
 }
@@ -70,7 +70,7 @@ body {
 
 #footer {
     width: 100%;
-    border-top: 3px solid #337ab7;
+    border-top: 3px solid #618873;
     margin-top: 20px;
     padding: 10px 0;
     background: #ffffff;
@@ -98,4 +98,37 @@ body {
     font-weight: bold;
     font-size: 150%;
     margin-top: -5px;
+}
+
+#top {
+    width: 100%;
+    background: url(../img/bg.jpg) repeat-x;
+    padding: 15px 0 0 0;
+    margin-top: -40px;
+}
+
+#top > .container {
+    padding: 15px 0;
+    height: 90px;
+}
+
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.navbar-default {
+    background: #618873;
+    box-shadow: 0 2px 12px #999999;
+    border: none;
+}
+.navbar-fixed-bottom, .navbar-fixed-top, .navbar-static-top {
+    border-radius: 0;
+}
+
+.navbar-default li a {
+    color: #ffffff !important;
+    text-shadow: none;
 }
