--- a/WebContent/resources/css/core.css
+++ b/WebContent/resources/css/core.css
@@ -132,3 +132,12 @@ body {
     color: #ffffff !important;
     text-shadow: none;
 }
+
+.navbar-default .dropdown-menu>li>a {
+    color: #333 !important;
+}
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus {
+    background: #a2b1aa;
+    color: #ffffff !important;
+}
