--- a/WebContent/resources/css/core.css
+++ b/WebContent/resources/css/core.css
@@ -31,8 +31,15 @@ body {
     margin: 0 auto;
 }
 
+.form-alterar-senha {
+    max-width: 430px;
+    padding: 15px;
+    margin: 0 auto;
+}
+
 .form-signin .form-signin-heading,
-.form-signin .checkbox {
+.form-signin .checkbox 
+.form-alterar-senha {
     margin-bottom: 10px;
 }
 
@@ -163,7 +170,9 @@ body {
     text-decoration: none !important;
 }
 
-
+h3{
+	margin-top: 2px !important;
+}
 
 .container {
     padding-right: 15px;
